fix: allow assert in test files (ruff S101)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,9 @@ ignore = [
 [tool.ruff.lint.isort]
 known-first-party = ["detective_benno"]
 
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = ["S101"]  # Allow assert in tests
+
 [tool.mypy]
 python_version = "3.10"
 strict = true
