--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,8 @@ select = [
 ]
 ignore = [
     "E501",  # line too long (handled by formatter)
+    "S607",  # subprocess partial path (git is expected in PATH)
+    "S603",  # subprocess without shell=True check
 ]
 
 [tool.ruff.lint.isort]
