--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "detective-benno"
-version = "0.1.0"
+version = "0.2.0"
 description = "An intelligent code review detective powered by LLM - solving code mysteries, one PR at a time"
 readme = "README.md"
 license = "Apache-2.0"
@@ -106,7 +106,7 @@ ignore = [
 known-first-party = ["detective_benno"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**/*.py" = ["S101"]  # Allow assert in tests
+"tests/**/*.py" = ["S101", "S105", "S106"]  # Allow assert and test tokens in tests
 
 [tool.mypy]
 python_version = "3.10"
