feat: add Anthropic Claude provider support
Add support for Anthropic Claude models as an LLM provider:
- Add AnthropicProvider class with Claude API integration
- Support for claude-sonnet-4-20250514, claude-3-5-haiku-20241022, etc.
- Register provider in factory (openai, anthropic, ollama)
- Add anthropic>=0.40.0 to dependencies
- Add comprehensive test suite (10 tests)
- Update README with Claude usage examples and documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "openai>=1.0.0",
+    "anthropic>=0.40.0",
     "click>=8.0.0",
     "pyyaml>=6.0",
     "rich>=13.0.0",
