feat: add Groq provider support
- Add GroqProvider class supporting llama-3.3-70b-versatile, mixtral-8x7b-32768, gemma2-9b-it models
- Register groq provider in factory
- Add groq>=0.4.0 dependency
- Update CLI to support --provider groq option
- Update action.yml with groq_api_key input
- Add Groq documentation to README
- Bump version to 0.3.0
- Add comprehensive unit tests (11 tests, 94% coverage)

--- a/action.yml
+++ b/action.yml
@@ -9,18 +9,24 @@ branding:
 inputs:
   # Provider configuration
   provider:
-    description: 'LLM provider to use (openai, ollama)'
+    description: 'LLM provider to use (openai, anthropic, groq, ollama)'
     required: false
     default: 'openai'
   openai_api_key:
     description: 'OpenAI API key (required for openai provider)'
+    required: false
+  anthropic_api_key:
+    description: 'Anthropic API key (required for anthropic provider)'
+    required: false
+  groq_api_key:
+    description: 'Groq API key (required for groq provider)'
     required: false
   ollama_base_url:
     description: 'Ollama API base URL (for ollama provider)'
     required: false
     default: 'http://localhost:11434'
   model:
-    description: 'Model to use (provider-specific, e.g., gpt-4o, codellama)'
+    description: 'Model to use (provider-specific, e.g., gpt-4o, claude-sonnet-4-20250514, llama-3.3-70b-versatile, codellama)'
     required: false
     default: ''
 
@@ -107,6 +113,8 @@ runs:
       shell: bash
       env:
         OPENAI_API_KEY: ${{ inputs.openai_api_key }}
+        ANTHROPIC_API_KEY: ${{ inputs.anthropic_api_key }}
+        GROQ_API_KEY: ${{ inputs.groq_api_key }}
         OLLAMA_HOST: ${{ inputs.ollama_base_url }}
         GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
