--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "detective-benno"
-version = "0.2.0"
+version = "0.3.0"
 description = "An intelligent code review detective powered by LLM - solving code mysteries, one PR at a time"
 readme = "README.md"
 license = "Apache-2.0"
@@ -39,6 +39,7 @@ requires-python = ">=3.10"
 dependencies = [
     "openai>=1.0.0",
     "anthropic>=0.40.0",
+    "groq>=0.4.0",
     "click>=8.0.0",
     "pyyaml>=6.0",
     "rich>=13.0.0",
